Set width: 100% so text-align property can work in conjunction to display fixed title in center of page.

--- a/css-positioning/fixed.css
+++ b/css-positioning/fixed.css
@@ -8,6 +8,5 @@ html {
 
   /* your code here */
   position: fixed;
-  top: 50px;
-  left: 300px;
+  width: 100%;
 }
